# DigitalHand

DigitalHandProjectiom/: CMakeLists.txt
DigitalHandProjectiom/.cache/clangd/index/: Handpart.cpp.7F839599771C6048.idx  Handpart.h.9FD8988472AFED32.idx  Imu_reader.cpp.5D1831796165FB7C.idx  Imu_reader.h.8F35D4A34DBB3B3A.idx  MadgwickAHRS.cpp.07B599F4CCCCF87B.idx  MadgwickAHRS.h.3CA515292F5CAD60.idx  ShaderLoader.cpp.94C9FE92925557F5.idx  ShaderLoader.h.29EF40B783FBD15D.idx  build_shader.cpp.261B32C98966969F.idx  build_shader.h.6AE657250AAB43EE.idx  callibrator.cpp.70CCB3D81369C2F4.idx  callibrator.h.013774788FDCDB29.idx  glad.c.833467823D1ABD5E.idx  glad.h.C421729A669F9C6B.idx  khrplatform.h.A151EBCD630F174A.idx  main.cpp.4565C70047C27ECE.idx
DigitalHandProjectiom/src/: main.cpp
DigitalHandProjectiom/src/DrawObjects/: Handpart.cpp  Handpart.h
DigitalHandProjectiom/src/MadgwickAlg/: MadgwickAHRS.cpp  MadgwickAHRS.h
DigitalHandProjectiom/src/callibration/: callibrator.cpp  callibrator.h
DigitalHandProjectiom/src/imu_reader/: Imu_reader.cpp  Imu_reader.h
DigitalHandProjectiom/src/opengl_api/: build_shader.cpp  build_shader.h
DigitalHandProjectiom/src/res/: fragment_shader.glsl  vertex_shader.glsl
DigitalHandProjectiom/src/utility/: ShaderLoader.cpp  ShaderLoader.h
roomorientation/: .clangd  Makefile  blink.elf  blink.hex
roomorientation/src/: main.c
roomorientation/src/TWI_interface/: twi_interface.c  twi_interface.h
roomorientation/src/Uart_api/: Uart_api.c  Uart_api.h
